# bincode_embedded

./: .rustfmt.toml  Cargo.toml
.github/workflows/: rust.yml
src/: deserialize.rs  lib.rs  serialize.rs
tests/: simple.rs
